# brainoxide

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  rust-clippy.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_interpreter.rs  fuzz_opt_exec_diff.rs  fuzz_opt_exec_diff_from_parse.rs  fuzz_opt_exec_diff_from_parse_no_io.rs  fuzz_optimiser.rs  fuzz_optimiser_from_parse.rs  fuzz_parser.rs
fuzz/src/: lib.rs
src/: ast.rs  bbdag.rs  byte_utils.rs  codegen.rs  equation.rs  interpreter.rs  lib.rs  main.rs  opt_types.rs  optimizers.rs  parser.rs  settings.rs  tape.rs  test_utils.rs  types.rs
src/optimizers/: bb_opt.rs
tests/: reproducers.rs
tests/regressions/: README.md  double_loop.bf  empty_loop.bf  entry_in_live_set.bf  incorrect_output.bf  inf_vs_exit.bf.disabled  oobrain_rep.bf  opt_bb_eqn.bf  tape_negative_eqn.bf
