[package]
authors = ["Arvid Norlander"]
categories = ["compilers"]
description = "An optimizing Brainfuck compiler/interpreter"
edition = "2021"
keywords = ["brainfuck", "esolang", "compiler", "interpreter"]
license = "GPL-3.0-only"
name = "brainoxide"
repository = "https://github.com/VorpalBlade/brainoxide"
version = "0.1.1"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1", optional = true, features = ["derive"] }
clap = { version = "4.3.12", features = ["derive", "wrap_help"] }
petgraph = "0.6.3"
thiserror = "1.0.43"
