[package]
authors = ["Arvid Norlander"]
categories = ["compilers"]
description = "An optimizing Brainfuck compiler/interpreter"
edition = "2021"
keywords = ["brainfuck", "esolang", "compiler", "interpreter"]
license = "GPL-3.0-only"
name = "brainoxide"
repository = "https://github.com/VorpalBlade/brainoxide"
rust-version = "1.80.0"
version = "0.1.2"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arbitrary = { version = "1.4", optional = true, features = ["derive"] }
clap = { version = "4.5.60", features = ["derive", "wrap_help"] }
petgraph = "0.8.3"
thiserror = "2.0.18"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(fuzzing)'] }
