[package]
name = "brainoxide-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }

[dependencies.brainoxide]
path = ".."
features = ["arbitrary"]

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[lib]
name = "brainoxide_fuzz"

[[bin]]
name = "fuzz_parser"
path = "fuzz_targets/fuzz_parser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_optimiser"
path = "fuzz_targets/fuzz_optimiser.rs"
test = false
doc = false

[[bin]]
name = "fuzz_interpreter"
path = "fuzz_targets/fuzz_interpreter.rs"
test = false
doc = false

[[bin]]
name = "fuzz_opt_exec_diff"
path = "fuzz_targets/fuzz_opt_exec_diff.rs"
test = false
doc = false

[[bin]]
name = "fuzz_opt_exec_diff_from_parse"
path = "fuzz_targets/fuzz_opt_exec_diff_from_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_optimiser_from_parse"
path = "fuzz_targets/fuzz_optimiser_from_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_opt_exec_diff_from_parse_no_io"
path = "fuzz_targets/fuzz_opt_exec_diff_from_parse_no_io.rs"
test = false
doc = false
